Fix unviewed circle alignment

--- a/web-server/public/stylesheets/chat.less
+++ b/web-server/public/stylesheets/chat.less
@@ -354,6 +354,9 @@
               .name-ctn { .display-flex; .flex(1); margin: auto 0; padding: 3px 10px 3px 5px;
                 .name, .username { .ft-opensans; display: inline-block; overflow: hidden; text-overflow: ellipsis; font-size: 13px; color: #AFBAC8; letter-spacing: 1px; line-height: 23px; width: 158px;}
               }
+              span.icon.unread {
+                height: 13px;
+              }
               .close-discussion, .close-group { font-size: 1.6rem; margin:auto; }
               &.blocked { span.name { text-decoration: line-through; } }
               &.grouped {
